cmake_minimum_required(VERSION 3.17)
project(cpp_demo)

set(CMAKE_CXX_STANDARD 14)
add_executable(src_cpp-primer-plus_chapter-2_exercise-1 src/cpp-primer-plus/chapter-2/exercise-1.cpp)
add_executable(src_cpp-primer-plus_chapter-2_exercise-2 src/cpp-primer-plus/chapter-2/exercise-2.cpp)
add_executable(src_cpp-primer-plus_chapter-2_exercise-3 src/cpp-primer-plus/chapter-2/exercise-3.cpp)
add_executable(src_cpp-primer-plus_chapter-2_exercise-6 src/cpp-primer-plus/chapter-2/exercise-6.cpp)
add_executable(src_cpp-primer-plus_chapter-3_exercise-1 src/cpp-primer-plus/chapter-3/exercise-1.cpp)
add_executable(src_cpp-primer-plus_chapter-3_exercise-2 src/cpp-primer-plus/chapter-3/exercise-2.cpp)
add_executable(src_cpp-primer-plus_chapter-4_exercise-1 src/cpp-primer-plus/chapter-4/exercise-1.cpp)
add_executable(src_cpp-primer-plus_chapter-4_exercise-3 src/cpp-primer-plus/chapter-4/exercise-3.cpp)
add_executable(src_cpp-primer-plus_chapter-4_exercise-4 src/cpp-primer-plus/chapter-4/exercise-4.cpp)
add_executable(src_cpp-primer-plus_chapter-4_exercise-5 src/cpp-primer-plus/chapter-4/exercise-5.cpp)
add_executable(src_cpp-primer-plus_chapter-4_exercise-6 src/cpp-primer-plus/chapter-4/exercise-6.cpp)
add_executable(src_cpp-primer-plus_chapter-4_exercise-7 src/cpp-primer-plus/chapter-4/exercise-7.cpp)
add_executable(src_cpp-primer-plus_chapter-4_exercise-8 src/cpp-primer-plus/chapter-4/exercise-8.cpp)
add_executable(src_cpp-primer-plus_chapter-4_exercise-9 src/cpp-primer-plus/chapter-4/exercise-9.cpp)
add_executable(src_cpp-primer-plus_chapter-5_exercise-1 src/cpp-primer-plus/chapter-5/exercise-1.cpp)
add_executable(src_cpp-primer-plus_chapter-5_exercise-2 src/cpp-primer-plus/chapter-5/exercise-2.cpp)
add_executable(src_cpp-primer-plus_chapter-5_exercise-3 src/cpp-primer-plus/chapter-5/exercise-3.cpp)
add_executable(src_cpp-primer-plus_chapter-5_exercise-4 src/cpp-primer-plus/chapter-5/exercise-4.cpp)
add_executable(src_cpp-primer-plus_chapter-5_exercise-6 src/cpp-primer-plus/chapter-5/exercise-6.cpp)
add_executable(src_cpp-primer-plus_chapter-6_exercise-1 src/cpp-primer-plus/chapter-6/exercise-1.cpp)
add_executable(src_cpp-primer-plus_chapter-6_exercise-2 src/cpp-primer-plus/chapter-6/exercise-2.cpp)
add_executable(src_cpp-primer-plus_chapter-6_exercise-6 src/cpp-primer-plus/chapter-6/exercise-6.cpp)
add_executable(src_cpp-primer-plus_chapter-6_exercise-7 src/cpp-primer-plus/chapter-6/exercise-7.cpp)
add_executable(src_cpp-primer-plus_chapter-7_exercise-1 src/cpp-primer-plus/chapter-7/exercise-1.cpp)
add_executable(src_cpp-primer-plus_chapter-7_exercise-2 src/cpp-primer-plus/chapter-7/exercise-2.cpp)
add_executable(src_cpp-primer-plus_chapter-7_exercise-3 src/cpp-primer-plus/chapter-7/exercise-3.cpp)
add_executable(src_cpp-primer-plus_chapter-7_exercise-8 src/cpp-primer-plus/chapter-7/exercise-8.cpp)
add_executable(src_cpp-primer-plus_chapter-8_exercise-1 src/cpp-primer-plus/chapter-8/exercise-1.cpp)
add_executable(src_cpp-primer-plus_chapter-8_exercise-2 src/cpp-primer-plus/chapter-8/exercise-2.cpp)
add_executable(src_cpp-primer-plus_chapter-8_exercise-3 src/cpp-primer-plus/chapter-8/exercise-3.cpp)
add_executable(src_cpp-primer-plus_chapter-8_exercise-4 src/cpp-primer-plus/chapter-8/exercise-4.cpp)
add_executable(src_cpp-primer-plus_chapter-8_exercise-5 src/cpp-primer-plus/chapter-8/exercise-5.cpp)
add_executable(src_cpp-primer-plus_chapter-9_exercise-1_main src/cpp-primer-plus/chapter-9/exercise-1/main.cpp src/cpp-primer-plus/chapter-9/exercise-1/golf.cpp src/cpp-primer-plus/chapter-9/exercise-1/golf.h)
add_executable(src_cpp-primer-plus_chapter-9_exercise-3 src/cpp-primer-plus/chapter-9/exercise-3.cpp)
add_executable(src_cpp-primer-plus_chapter-9_exercise-4_main src/cpp-primer-plus/chapter-9/exercise-4/main.cpp src/cpp-primer-plus/chapter-9/exercise-4/sales.h src/cpp-primer-plus/chapter-9/exercise-4/sales.cpp)
add_executable(src_cpp-primer-plus_chapter-10_exercise-1_main src/cpp-primer-plus/chapter-10/exercise-1/main.cpp src/cpp-primer-plus/chapter-10/exercise-1/Account.cpp src/cpp-primer-plus/chapter-10/exercise-1/Account.h)
add_executable(src_cpp-primer-plus_chapter-11_exercise-4_main src/cpp-primer-plus/chapter-11/exercise-4/main.cpp src/cpp-primer-plus/chapter-11/exercise-4/Time.cpp src/cpp-primer-plus/chapter-11/exercise-4/Time.h)
add_executable(src_cpp-primer-plus_chapter-11_exercise-5_main src/cpp-primer-plus/chapter-11/exercise-5/main.cpp src/cpp-primer-plus/chapter-11/exercise-5/Stonewt.cpp src/cpp-primer-plus/chapter-11/exercise-5/Stonewt.h)
add_executable(src_cpp-primer-plus_chapter-11_exercise-6_main src/cpp-primer-plus/chapter-11/exercise-6/main.cpp src/cpp-primer-plus/chapter-11/exercise-6/Stonewt.cpp src/cpp-primer-plus/chapter-11/exercise-6/Stonewt.h)
add_executable(src_cpp-primer-plus_chapter-12_exercise-1_main src/cpp-primer-plus/chapter-12/exercise-1/main.cpp src/cpp-primer-plus/chapter-12/exercise-1/Cow.cpp src/cpp-primer-plus/chapter-12/exercise-1/Cow.h)
add_executable(src_cpp-primer-plus_chapter-12_exercise-2_main src/cpp-primer-plus/chapter-12/exercise-2/main.cpp src/cpp-primer-plus/chapter-12/exercise-2/String.cpp src/cpp-primer-plus/chapter-12/exercise-2/String.h)
add_executable(src_cpp-primer-plus_chapter-12_exercise-3_main src/cpp-primer-plus/chapter-12/exercise-3/main.cpp src/cpp-primer-plus/chapter-12/exercise-3/Stock.cpp src/cpp-primer-plus/chapter-12/exercise-3/Stock.h)
add_executable(src_cpp-primer-plus_chapter-13_exercise-1_main src/cpp-primer-plus/chapter-13/exercise-1/main.cpp src/cpp-primer-plus/chapter-13/exercise-1/Cd.cpp src/cpp-primer-plus/chapter-13/exercise-1/Cd.h src/cpp-primer-plus/chapter-13/exercise-1/Classic.cpp src/cpp-primer-plus/chapter-13/exercise-1/Classic.h)
add_executable(src_cpp-primer-plus_chapter-13_exercise-2_main src/cpp-primer-plus/chapter-13/exercise-2/main.cpp src/cpp-primer-plus/chapter-13/exercise-2/Cd.cpp src/cpp-primer-plus/chapter-13/exercise-2/Cd.h src/cpp-primer-plus/chapter-13/exercise-2/Classic.cpp src/cpp-primer-plus/chapter-13/exercise-2/Classic.h)
add_executable(src_cpp-primer-plus_chapter-13_exercise-3_main src/cpp-primer-plus/chapter-13/exercise-3/main.cpp src/cpp-primer-plus/chapter-13/exercise-3/ABC.cpp src/cpp-primer-plus/chapter-13/exercise-3/ABC.h src/cpp-primer-plus/chapter-13/exercise-3/BaseDMA.cpp src/cpp-primer-plus/chapter-13/exercise-3/BaseDMA.h src/cpp-primer-plus/chapter-13/exercise-3/LacksDMA.cpp src/cpp-primer-plus/chapter-13/exercise-3/LacksDMA.h src/cpp-primer-plus/chapter-13/exercise-3/HasDMA.cpp src/cpp-primer-plus/chapter-13/exercise-3/HasDMA.h)
add_executable(src_cpp-primer-plus_chapter-14_exercise-1_main src/cpp-primer-plus/chapter-14/exercise-1/main.cpp src/cpp-primer-plus/chapter-14/exercise-1/Pair.h src/cpp-primer-plus/chapter-14/exercise-1/Wine.cpp src/cpp-primer-plus/chapter-14/exercise-1/Wine.h)
add_executable(src_cpp-primer-plus_chapter-14_exercise-2_main src/cpp-primer-plus/chapter-14/exercise-2/main.cpp src/cpp-primer-plus/chapter-14/exercise-2/Pair.h src/cpp-primer-plus/chapter-14/exercise-2/Wine.cpp src/cpp-primer-plus/chapter-14/exercise-2/Wine.h)
add_executable(src_cpp-primer-plus_chapter-14_exercise-4_main src/cpp-primer-plus/chapter-14/exercise-4/main.cpp src/cpp-primer-plus/chapter-14/exercise-4/Person.cpp src/cpp-primer-plus/chapter-14/exercise-4/Person.h src/cpp-primer-plus/chapter-14/exercise-4/Gunslinger.cpp src/cpp-primer-plus/chapter-14/exercise-4/Gunslinger.h src/cpp-primer-plus/chapter-14/exercise-4/PokerPlayer.cpp src/cpp-primer-plus/chapter-14/exercise-4/PokerPlayer.h src/cpp-primer-plus/chapter-14/exercise-4/BadDude.cpp src/cpp-primer-plus/chapter-14/exercise-4/BadDude.h)
add_executable(src_cpp-primer-plus_chapter-15_exercise-1_main src/cpp-primer-plus/chapter-15/exercise-1/main.cpp src/cpp-primer-plus/chapter-15/exercise-1/Tv.cpp src/cpp-primer-plus/chapter-15/exercise-1/Tv.h src/cpp-primer-plus/chapter-15/exercise-1/Remote.cpp src/cpp-primer-plus/chapter-15/exercise-1/Remote.h)